--- a/templates/our_story.html
+++ b/templates/our_story.html
@@ -12,12 +12,11 @@
 </head>
 <body>
 <main>
-<div class="main-image">
-    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Ananya & Mayank">
-</div>
-<div class="header-content">
-    <p>November 21st - 22nd, 2024<br> {{ days_to_go }} DAYS TO GO!</p>
-</div>
+    <h2>How We Met</h2>
+    <p>Write your story here...</p>
+
+    <h2>The Proposal</h2>
+    <p>Share details about the proposal here...</p>
 </main>
 {% endblock %}
 </body>
