--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RSVP Authentication</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}RSVP Authentication{% endblock %}
+{% block content %}
 <div class="container">
     <h2>RSVP Authentication</h2>
     <form method="POST" action="{{ url_for('rsvp') }}" class="form">
@@ -36,5 +30,4 @@
     {% endif %}
     {% endwith %}
 </div>
-</body>
-</html>
+{% endblock %}
