--- a/templates/rsvp.html
+++ b/templates/rsvp.html
@@ -1,16 +1,26 @@
 {% extends "base.html" %}
 {% block title %}RSVP{% endblock %}
 {% block content %}
-    <h1>RSVP</h1>
-    <form method="POST">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-        <label for="attending">
-            <input type="checkbox" id="attending" name="attending">
-            I will be attending
-        </label><br><br>
-        <input type="submit" value="Submit RSVP">
+<div class="rsvp-container">
+    <h2>RSVP</h2>
+    <form method="POST" class="rsvp-form">
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="attending">
+                <input type="checkbox" id="attending" name="attending">
+                I will be attending
+            </label>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Submit RSVP">
+        </div>
     </form>
+</div>
 {% endblock %}
