Update titles for each HTML template

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Our Story{% endblock %}
+{% block title %}Ananya & Mayank{% endblock %}
 
 {% block content %}
 <html lang="en">
