--- a/templates/rsvp.html
+++ b/templates/rsvp.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}RSVP{% endblock %}
+{% block title %}Ananya & Mayank | RSVP{% endblock %}
 {% block content %}
 <div class="rsvp-container">
     <h2>RSVP</h2>
