--- a/templates/travel.html
+++ b/templates/travel.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Travel Information{% endblock %}
+{% block title %}Ananya & Mayank | Travel{% endblock %}
 
 {% block content %}
 <div class="travel-container">
