--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}RSVP Authentication{% endblock %}
+{% block title %}Ananya & Mayank | RSVP Authentication{% endblock %}
 {% block content %}
 <div class="container">
     <h2>RSVP Authentication</h2>
