--- a/templates/rsvp_form.html
+++ b/templates/rsvp_form.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}RSVP{% endblock %}
+{% block title %}Ananya & Mayank | RSVP{% endblock %}
 {% block content %}
 <div class="container">
     <h2>RSVP Form</h2>
