--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Schedule{% endblock %}
+{% block title %}Ananya & Mayank | Schedule{% endblock %}
 
 {% block content %}
 <div class="schedule-container">
