--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Thank You{% endblock %}
+{% block title %}Ananya & Mayank | Thank You{% endblock %}
 {% block content %}
     <h1>Thank You</h1>
     <p>Your RSVP has been received. We look forward to celebrating with you!</p>
