Change title name for RSVP authentication page

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Ananya & Mayank | Q & A{% endblock %}
+{% block title %}Ananya & Mayank | FAQs{% endblock %}
 
 {% block content %}
 <div class="faq-container">
