--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 {% block title %}Ananya & Mayank | RSVP{% endblock %}
 {% block content %}
-<div class="container">
+<div class="schedule-container">
     <h2>RSVP Authentication</h2>
     <form method="POST" action="{{ url_for('rsvp') }}" class="form">
         <div class="form-group">
             <label for="first_name">First Name</label>
-            <input type="text" id="first_name" name="first_name" required>
+            <input type="text" id="first_name" name="first_name" required class="form-control small-input">
         </div>
         <div class="form-group">
             <label for="last_name">Last Name</label>
-            <input type="text" id="last_name" name="last_name" required>
+            <input type="text" id="last_name" name="last_name" required class="form-control small-input">
         </div>
         <div class="form-group">
             <label for="secret_code">Secret Code</label>
-            <input type="password" id="secret_code" name="secret_code" required>
+            <input type="password" id="secret_code" name="secret_code" required class="form-control small-input">
         </div>
         <div class="form-group">
             <button type="submit" class="btn">Submit</button>
