--- a/templates/rsvp_form.html
+++ b/templates/rsvp_form.html
@@ -1,15 +1,59 @@
 {% extends "base.html" %}
 {% block title %}Ananya & Mayank | RSVP{% endblock %}
 {% block content %}
-<div class="container">
+<style>
+    .small-input {
+        width: 100%;
+        max-width: 300px;
+        box-sizing: border-box; /* Ensure padding doesn't affect total width */
+    }
+    @media (min-width: 576px) {
+        .small-input {
+            width: 50%;
+        }
+    }
+    @media (min-width: 768px) {
+        .small-input {
+            width: 33%;
+        }
+    }
+    .form-control {
+        background-color: white;
+        color: black;
+    }
+    .form-control option {
+        background-color: white;
+        color: black;
+    }
+</style>
+<div class="schedule-container">
     <h2>RSVP Form</h2>
     <form method="POST" action="{{ url_for('rsvp_form') }}" class="form">
         <div class="form-group">
             <label for="attendance">Will you attend?</label>
-            <select id="attendance" name="attendance" required>
+            <select id="attendance" name="attendance" required class="form-control small-input">
                 <option value="yes">Yes</option>
                 <option value="no">No</option>
             </select>
+        </div>
+        <div class="form-group">
+            <label for="people">How many people will you be attending with?</label>
+            <select id="people" name="people" required class="form-control small-input">
+                <option value="Just me">Just me</option>
+                <option value="With 1 more person">With 1 more person</option>
+                <option value="With 2 more people">With 2 more people</option>
+                <option value="With 3 more people">With 3 more people</option>
+                <option value="With 4 more people">With 4 more people</option>
+                <option value="With 5 more people">With 5 more people</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="dietary_restrictions">Do you have any dietary restrictions?</label>
+            <input type="text" id="dietary_restrictions" name="dietary_restrictions" class="form-control small-input">
+        </div>
+        <div class="form-group">
+            <label for="hashtag_suggestions">Can you provide suggestions for our hashtag?</label>
+            <input type="text" id="hashtag_suggestions" name="hashtag_suggestions" class="form-control small-input">
         </div>
         <div class="form-group">
             <button type="submit" class="btn">Submit</button>
