Add additional line for days to go text

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Ananya & Mayank">
 </div>
 <div class="header-content">
-    <p>November 21st - 22nd, 2024<br> {{ days_to_go }} DAYS TO GO!</p>
+    <p>November 21st - 22nd, 2024<br> <br> {{ days_to_go }} DAYS TO GO!</p>
 </div>
 </main>
 {% endblock %}
